real-estate/deployment-back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: real-estate-listing-platform-deployment
  namespace: real-estate-listing-namespace
spec:
  replicas: 3
  selector:
    matchLabels:
      app: real-estate-listing-platform
  template:
    metadata:
      labels:
        app: real-estate-listing-platform
    spec:
      containers:
        - name: real-estate-listing-platform-container
          image: leonnura/backend-real-estate:$(Build.BuildId)
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: real-estate-listing-backend-service
  namespace: real-estate-listing-namespace
spec:
  selector:
    app: nginx
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: LoadBalancer
