real-estate/ingress-back-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: real-estate-listing-platform-ingress
  namespace: real-estate-listing-namespace
spec:
  rules:
    - host: real-estate-listing-platform.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: real-estate-listing-platform-service
                port:
                  number: 8080
